<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_fm">FM Radio</string>
    <string name="title_channellist">Station list</string>
    <string name="msg_no_channel">No station</string>
    <string name="msg_not_saved">Not saved</string>
    <string name="menu_ok">OK</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="default_input_channel_name">Station</string>
    <string name="msg_searching">Searching…</string>
    <string name="empty">Empty</string>
    <string name="menu_save_channel">Save station</string>
    <string name="menu_input_freq">Input frequency</string>
    <string name="menu_rename_channel">Rename station</string>
    <string name="menu_inching_tuning">Inching tuning</string>
    <string name="menu_auto_tune">Auto tuning</string>
    <string name="title_select_channel_to_delete">Select Station to delete</string>
    <string name="msg_name_in_use">already in use</string>
    <string name="msg_replace_channel">Are you sure you want to replace the current station?</string>
    <string name="msg_delete_marked_channel">The selected stations will be deleted.</string>
    <string name="title_input_channel_name">Input station name</string>
    <string name="title_replace_current_channel">Replace current station</string>
    <string name="msg_replace_channel_list">Auto tuning will clear station list. Continue?</string>
    <string name="title_context_menu">Set station</string>
    <string name="msg_input_freq_invalid">Please input valid frequency</string>
    <string name="msg_no_earphone">Please connect headset</string>
    <string name="menu_delete_channel">Delete station</string>
    <string name="menu_stop_autotune">Stop</string>
    <string name="msg_input_nothing">Content is empty</string>
    <string name="msg_name_too_long">The input name is too long</string>
    <string name="title_warning">Warning</string>
    <string name="title_error">Error</string>
    <string name="msg_service_start_error">Sorry, connect server failed.</string>
    <string name="msg_open_failure">Unable to open.</string>
    <string name="msg_save_channel_success">Station saved.</string>
    <string name="msg_save_channel_failure">Failed to save the station.</string>
    <string name="msg_rename_success">Renaming succeeded.</string>
    <string name="msg_rename_fail">Renaming failed.</string>
    <string name="msg_delete_success">Deletion succeeded.</string>
    <string name="msg_delete_fail">Deletion failed.</string>
    <string name="calling_tips">Please play after ending call.</string>
    <string name="widget_title_fm">My FM</string>
    <string name="msg_frequency_range">%1$s ~ %2$s MHz</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="msg_airplane_mode">FM tuner is not available in Airplane mode.</string>
    <string name="waiting">Please wait…</string>
    <string name="tuning_flag">Tuning</string>
    <string name="waiting_open">Opening…</string>
    <string name="waiting_stop">Closing…</string>
    <string name="freq_tag">MHz</string>
    <string name="select_count">%s selected</string>
    <string name="input_freq">Input frequency</string>
    <string name="msg_delete_single_channel">The station will be deleted.</string>
    <string name="menu_cancel_collect">Remove</string>
    <string name="menu_search_keep_collect">Keep favorite stations</string>
    <string name="menu_search_not_keep_collect">Clear favorite stations</string>
    <string name="msg_cancel_collect_success">Removed from Favorites.</string>
    <string name="msg_plug_headset">Please plug in your headset. It also serves as the radio antenna.</string>
    <string name="msg_collect_success">Added to Favorites.</string>
    <string name="msg_station_collected">Already exists in Favorites.</string>
    <string name="msg_collected_number_full">The maximum number (8) of favorite stations reached. Please remove some stations from Favorites first.</string>
    <string name="msg_edit_station">Edit station</string>
    <string name="msg_sleep_mode_setting">Sleep mode (minutes)</string>
    <string name="msg_enable_sleep_mode">Turn FM Radio off after a preset time</string>
    <string name="title_search_station">Scan stations</string>
    <string name="msg_search_station">Scanning stations...</string>
    <string name="value_1">1</string>
    <string name="value_2">15</string>
    <string name="value_3">30</string>
    <string name="value_4">45</string>
    <string name="value_5">60</string>
    <string name="msg_airplane_mode_on">FM Radio is not available in airplane mode.</string>
    <string name="title_enter_freq">Set frequency (MHz)</string>
</resources>
