<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="@color/title_name_and_downline_color" android:gravity="center_vertical" android:id="@id/titleId" android:paddingLeft="18.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:text="@string/msg_sleep_mode_setting" />
    <View android:id="@id/divildId" android:background="@color/title_name_and_downline_color" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <CheckBox android:textSize="18.0sp" android:id="@id/switch_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/msg_enable_sleep_mode" style="@style/Widget.FM.CheckBox" />
    <RelativeLayout android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/cur_value" android:background="@drawable/bg_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/graduation" android:background="@drawable/graduation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <SeekBar android:id="@id/seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:max="60" android:progressDrawable="@drawable/seekbar_progress" style="@style/Widget.FM.SeekBar" />
    </RelativeLayout>
    <RelativeLayout android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/value_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/value_1" android:layout_alignParentLeft="true" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/value_15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/value_2" android:layout_alignParentLeft="true" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/value_30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/value_3" android:layout_alignParentLeft="true" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/value_45" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/value_4" android:layout_alignParentRight="true" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/value_60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/value_5" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>