<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="@color/title_name_and_downline_color" android:gravity="center_vertical" android:id="@id/titleId" android:paddingLeft="18.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:text="@string/msg_edit_station" />
    <View android:background="@color/title_name_and_downline_color" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <Button android:textSize="18.0sp" android:textColor="@color/popudialog_text_color" android:gravity="center_vertical" android:id="@id/to_rename" android:background="@drawable/btn_press_bg" android:paddingLeft="18.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/menu_rename_channel" />
    <View android:background="@color/gray_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <Button android:textSize="18.0sp" android:textColor="@color/popudialog_text_color" android:gravity="center_vertical" android:id="@id/cancel_collect" android:background="@drawable/btn_press_bg" android:paddingLeft="18.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/menu_cancel_collect" />
</LinearLayout>